style.css
body{
    background-color: #F3E7D3;
}

h1{
    text-align: center;
    color: #3E2C1C;
    font-size: 50px;
    margin-bottom: 5px;
}
h2{
    text-align: center;
    color: #3E2C1C;
    font-size: 8px;
    margin-top: 0px;
}
h3{
    text-align: center;
    color: #3E2C1C;
    font-size: 24px;
    margin-top: 30px;
}
h4{    
    text-align: center;
    color: #3E2C1C;
    font-size: 92px;
    margin-bottom: 10px;
    margin-top: 0px;

}
h5{
    text-align: center;
    color: #F7EDDF;
    font-size: 106px;
    margin-top: 10px;
}

.hero-image{
    background-image: url("./imagefolder/image\ under\ title.jpg");
    height: 501px;
    margin-top: 0px; 
    padding-top: 250px;
}

h6{
    color: #3E2C1C;
    font-size: 58px;
    padding: 20px 150px;
    margin-bottom: 0px;
    width: 100%;
    margin-top: 100px;
}

.content-intro{
    color: #3E2C1C;
    font-size: 23px; 
    width: 897px;
    text-align: left;
    width: 900px;
    margin-left: 250px;
    margin-right: 170px;
    margin-top: 0px;
    line-height: 1.5;
}

.half-burger-image{
    object-position: 200px;
}

.text-next-to-intro-image{
    color: #3E2C1C;
    font-size: 23px; 
    width: 897px;
    text-align: left;
    width: 400px;
    margin-left: 50px;
    margin-right: 170px;
    margin-top: 0px;
}

.two-columns{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

.burger-collection-title{
    text-align: left;
    color: #3E2C1C;
    font-size: 92px;
    margin-left: 200px;
    margin-bottom: 10px;
    margin-top: 0px;
}

